--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <!--
   <parent>
     <groupId>io.oasp.java.dev</groupId>
     <artifactId>oasp4j</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
-  -->
   <groupId>io.oasp.java</groupId>
   <artifactId>oasp4j-bom</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>${oasp4j.version}</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Dependencies (BOM) of the Open Application Standard Platform for Java (OASP4J) based on spring boot.</description>
@@ -24,6 +22,7 @@
     <cxf.version>3.0.4</cxf.version>
     <spring.version>4.0.9.RELEASE</spring.version>
     <oasp.gpg.keyname>joerg.hohwiller@capgemini.com</oasp.gpg.keyname>
+    <oasp.flatten.mode>bom</oasp.flatten.mode>
   </properties>
 
   <dependencyManagement>
@@ -272,97 +271,5 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
-   <distributionManagement>
-    <repository>
-      <id>oasp.releases</id>
-      <name>OASP Releases</name>
-      <url>http://oasp-ci.cloudapp.net/nexus/content/repositories/releases/</url>
-    </repository>
-    <snapshotRepository>
-      <id>oasp.snapshots</id>
-      <name>OASP Snapshots</name>
-      <url>http://oasp-ci.cloudapp.net/nexus/content/repositories/snapshots/</url>
-    </snapshotRepository>
-    <site>
-      <id>oasp-site</id>
-      <url>file://${user.dir}/target/oasp4j/maven</url>
-    </site>
-  </distributionManagement>
-
-  <profiles>
-    <profile>
-      <id>deploy</id>
-      <build>
-        <plugins>
-          <!-- http://mojo.codehaus.org/flatten-maven-plugin/ -->
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>flatten-maven-plugin</artifactId>
-            <version>1.0.0-beta-3</version>
-            <configuration>
-              <flattenMode>oss</flattenMode>
-            </configuration>
-            <executions>
-              <execution>
-                <id>flatten</id>
-                <phase>process-test-resources</phase>
-                <goals>
-                  <goal>flatten</goal>
-                </goals>
-              </execution>
-              <execution>
-                <id>flatten.clean</id>
-                <phase>clean</phase>
-                <goals>
-                  <goal>clean</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <!-- also generate javadoc JARs -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-javadocs</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <!-- Sign artifacts with PGP -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <configuration>
-            	<keyname>${oasp.gpg.keyname}</keyname>
-            </configuration>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-      <distributionManagement>
-        <snapshotRepository>
-          <id>ossrh</id>
-          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-          <id>ossrh</id>
-          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-      </distributionManagement>
-    </profile>
-  </profiles>
 
 </project>
