#56 New job added

--- a/oasp4j-modules/pom.xml
+++ b/oasp4j-modules/pom.xml
@@ -22,6 +22,7 @@
     <module>oasp4j-security</module>
     <module>oasp4j-jpa</module>
     <module>oasp4j-jpa-envers</module>
+	<module>oasp4j-batch</module>
     <module>oasp4j-web</module>
   </modules>
 
