--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -236,6 +236,11 @@
       </dependency>
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-batch</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-beanmapping</artifactId>
         <version>${project.version}</version>
       </dependency>
