--- a/oasp4j-templates/oasp4j-template-server/src/main/templates/archetype-resources/pom.xml
+++ b/oasp4j-templates/oasp4j-template-server/src/main/templates/archetype-resources/pom.xml
@@ -18,6 +18,9 @@
 
   <modules>
     <module>${artifactId}-core</module>
+#if($earProjectName != '.')
+    <module>${earProjectName}</module>
+#end
     <module>${artifactId}-server</module>
   </modules>
 
