--- a/oasp4j-templates/oasp4j-template-server/src/test/resources/projects/enterprise/archetype.properties
+++ b/oasp4j-templates/oasp4j-template-server/src/test/resources/projects/enterprise/archetype.properties
@@ -2,5 +2,5 @@
 package=it.pkg
 version=0.1-SNAPSHOT
 groupId=archetype.it
-artifactId=basic
-earProjectName=.
+artifactId=enterprise
+earProjectName=${artifactId}-ear
