--- a/oasp4j-samples/oasp4j-sample-core/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-core/pom.xml
@@ -21,6 +21,11 @@
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-batch-admin</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-logging</artifactId>
     </dependency>
 
