--- a/oasp4j-modules/oasp4j-rest/pom.xml
+++ b/oasp4j-modules/oasp4j-rest/pom.xml
@@ -60,6 +60,23 @@
       <artifactId>oasp4j-test</artifactId>
       <scope>test</scope>
     </dependency>
+     <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+       <groupId>javax.el</groupId>
+       <artifactId>javax.el-api</artifactId>
+       <version>2.2.4</version>
+     <scope>test</scope>
+    </dependency>
+    <dependency>
+       <groupId>org.glassfish.web</groupId>
+       <artifactId>javax.el</artifactId>
+       <version>2.2.4</version>
+     <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
