#223: allowing access-control-allow-origin header by CORS filter

--- a/oasp4j-samples/oasp4j-sample-server/src/main/webapp/WEB-INF/web.xml
+++ b/oasp4j-samples/oasp4j-sample-server/src/main/webapp/WEB-INF/web.xml
@@ -115,6 +115,10 @@
       <param-name>cors.allowed.methods</param-name>
       <param-value>GET,POST,HEAD,PUT,DELETE</param-value>
     </init-param>
+    <init-param>
+      <param-name>cors.allowed.headers</param-name>
+      <param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,access-control-allow-origin</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
     <filter-name>CorsFilter</filter-name>
