BOM refactoring proposal

--- a/oasp4j-modules/pom.xml
+++ b/oasp4j-modules/pom.xml
@@ -27,6 +27,14 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- BOM of spring-boot -->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring.boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <!-- BOM of OASP4J -->
       <dependency>
         <groupId>io.oasp.java</groupId>
