--- a/oasp4j-modules/oasp4j-jpa/src/test/resources/config/app/application-default.properties
+++ b/oasp4j-modules/oasp4j-jpa/src/test/resources/config/app/application-default.properties
@@ -3,7 +3,7 @@
 # ---------------------------------------------------------------------------
 database.user.login = sa
 database.user.password =
-database.url = jdbc:h2:target/.sample;INIT=create schema if not exists public
+database.url = jdbc:h2:./target/.sample;INIT=create schema if not exists public
 database.hibernate.dialect = org.hibernate.dialect.H2Dialect
 database.datasource = org.h2.jdbcx.JdbcDataSource
 database.hibernate.hbm2ddl.auto = create
