--- a/oasp4j-modules/oasp4j-beanmapping/pom.xml
+++ b/oasp4j-modules/oasp4j-beanmapping/pom.xml
@@ -22,11 +22,16 @@
     <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
-    </dependency>    
+    </dependency>
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-util-core</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
