--- a/oasp4j-modules/oasp4j-beanmapping/pom.xml
+++ b/oasp4j-modules/oasp4j-beanmapping/pom.xml
@@ -24,6 +24,13 @@
       <artifactId>javax.inject</artifactId>
     </dependency>
 
+    <!-- Orika (not yet default but will once replace dozer) -->
+    <dependency>
+      <groupId>ma.glasnost.orika</groupId>
+      <artifactId>orika-core</artifactId>
+      <optional>true</optional>
+    </dependency>
+
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-test</artifactId>
