--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
@@ -18,3 +18,7 @@ database.migration.auto = true
 database.migration.clean = true
 
 database.hibernate.hbm2ddl.auto = update
+
+# Logging
+log.console.disabled = false
+log.dir = ${WORKSPACE_PATH}/logs/
