--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
@@ -33,3 +33,8 @@ database.h2.server.port = ${oasp.db.port}
 # ---------------------------------------------------------------------------
 # ATTENTION: These are the settings for production. Only change in development and test environments!
 security.expose.error.details = false
+
+# Logging
+log.console.disabled = true
+#log.dir = ${catalina.base}/logs/
+log.dir = ../logs/
