#230 avoid redundant version numbers in POMs

--- a/oasp4j-templates/oasp4j-template-server/build.xml
+++ b/oasp4j-templates/oasp4j-template-server/build.xml
@@ -29,7 +29,7 @@
     -->
 
   	<!-- **** root project **** -->
-  	<copy file="${template.input}/pom.xml" todir="${sample.output}">
+  	<copy file="${filtered.input}/pom.xml" todir="${sample.output}">
       <filterchain>
         <tokenfilter>
           <linetokenizer/>
