--- a/oasp4j-templates/oasp4j-template-server/pom.xml
+++ b/oasp4j-templates/oasp4j-template-server/pom.xml
@@ -16,6 +16,7 @@
 
   <properties>
     <template.input>${basedir}/src/main/templates/archetype-resources</template.input>
+    <filtered.input>${basedir}/target/archetype</filtered.input>
     <sample.package>io.oasp.gastronomy.restaurant</sample.package>
     <sample.package.path>io/oasp/gastronomy/restaurant</sample.package.path>
     <sample.input>../../oasp4j-samples</sample.input>
@@ -51,6 +52,12 @@
   </properties>
 
   <build>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/resources/</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <outputDirectory>target/archetype</outputDirectory>
     <extensions>
       <extension>
@@ -61,6 +68,16 @@
     </extensions>
 
 		<plugins>
+      <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-resources-plugin</artifactId>
+               <configuration>
+                   <delimiters>
+                       <delimiter>^*^</delimiter>
+                   </delimiters>
+                   <useDefaultDelimiters>false</useDefaultDelimiters>
+               </configuration>
+           </plugin>
 			<plugin>
 				<artifactId>maven-archetype-plugin</artifactId>
 				<version>2.2</version>
