--- a/oasp4j-templates/oasp4j-template-server/src/main/resources/pom.xml
+++ b/oasp4j-templates/oasp4j-template-server/src/main/resources/pom.xml
@@ -9,8 +9,8 @@
   <description>Application based on the Open Application Standard Platform for Java (OASP4J).</description>
 
   <properties>
-    <spring.boot.version>1.1.11.RELEASE</spring.boot.version>
-    <java.version>1.7</java.version>
+    <spring.boot.version>^spring.boot.version^</spring.boot.version>
+    <java.version>^java.version^</java.version>
     <oasp.port.range>81</oasp.port.range>
     <oasp.http.port>${oasp.port.range}81</oasp.http.port>
     <oasp.db.port>${oasp.port.range}43</oasp.db.port>
