--- a/oasp4j-modules/oasp4j-test/pom.xml
+++ b/oasp4j-modules/oasp4j-test/pom.xml
@@ -49,5 +49,21 @@
       <groupId>com.github.tomakehurst</groupId>
       <artifactId>wiremock</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.serenity-bdd</groupId>
+      <artifactId>core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>net.serenity-bdd</groupId>
+      <artifactId>serenity-junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+    </dependency>
+    <!-- dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+    </dependency-->
   </dependencies>
 </project>
