--- a/oasp4j-modules/oasp4j-jpa/pom.xml
+++ b/oasp4j-modules/oasp4j-jpa/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
