--- a/oasp4j-modules/oasp4j-batch-admin/pom.xml
+++ b/oasp4j-modules/oasp4j-batch-admin/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-admin-manager</artifactId>
-      <version>1.3.1.RELEASE</version>
+      <version>2.0.0.BUILD-SNAPSHOT</version><!-- 1.3.1.RELEASE -->
     </dependency>
 
     <!-- Test dependencies -->
