moved cors support

--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
@@ -38,3 +38,7 @@ security.expose.error.details = false
 log.console.disabled = true
 #log.dir = ${catalina.base}/logs/
 log.dir = ../logs/
+
+#CSRF AND CORS
+oasp.filter.csrf=true
+oasp.filter.cors=false
