--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
@@ -9,6 +9,9 @@
 # ${CATALINA_BASE}/lib/config/env/application.properties
 # ---------------------------------------------------------------------------
 
+appname=OASPAPP
+
+
 # ---------------------------------------------------------------------------
 # Persistence and database
 # ---------------------------------------------------------------------------
@@ -38,6 +41,7 @@ security.expose.error.details = false
 log.console.disabled = true
 #log.dir = ${catalina.base}/logs/
 log.dir = ../logs/
+log.pattern=[D: %d{ISO8601}] [P: %-5p] [C: %X{correlationId}] [T: %t] [L: %c] - [M: %m]  %n
 
 #CSRF AND CORS
 oasp.filter.csrf=true
