--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
@@ -10,6 +10,8 @@
 # ${CATALINA_BASE}/lib/config/env/application.properties
 # ----------------------------------------------------------------------------
 
+appname=restaurant
+
 # Database
 database.user.login = sa
 database.user.password =
