--- a/oasp4j-samples/oasp4j-sample-server-integration/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-server-integration/pom.xml
@@ -53,6 +53,11 @@
       <version>${project.version}</version>
       <type>war</type>
     </dependency>
+
+    <dependency>
+      <groupId>javax.el</groupId>
+      <artifactId>javax.el-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
