Allow batch start via command line remove spring batch admin

--- a/oasp4j-samples/pom.xml
+++ b/oasp4j-samples/pom.xml
@@ -22,7 +22,7 @@
   <modules>
     <module>oasp4j-sample-core</module>
     <module>oasp4j-sample-server</module>
-    <module>oasp4j-sample-batch-server</module>
+    <module>oasp4j-sample-batch</module>
   </modules>
 
   <dependencyManagement>
