--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -214,18 +214,16 @@
         <version>1.54</version>
       </dependency>
 
-      <!-- Dependencies for testing constraint validation excepcion -->
+      <!-- Dependencies for testing constraint validation -->
       <dependency>
         <groupId>javax.el</groupId>
         <artifactId>javax.el-api</artifactId>
         <version>2.2.4</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.glassfish.web</groupId>
         <artifactId>javax.el</artifactId>
         <version>2.2.4</version>
-        <scope>test</scope>
       </dependency>
 
       <!-- *** INTERNAL DEPENDENCIES *** -->
