--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
     <module>oasp4j-bom</module>
     <module>oasp4j-modules</module>
     <module>oasp4j-templates</module>
-    <module>oasp4j-sample-batch-server</module>
   </modules>
 
   <properties>
@@ -152,6 +151,11 @@
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>2.9.1</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>      	
+          <artifactId>maven-antrun-plugin</artifactId>  
+          <version>1.8</version>  
+        </plugin>    
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-project-info-reports-plugin</artifactId>
