--- a/oasp4j-samples/oasp4j-sample-batch/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-batch/pom.xml
@@ -11,6 +11,7 @@
   <artifactId>oasp4j-sample-batch</artifactId>
   <version>dev-SNAPSHOT</version>
   <name>${project.artifactId}</name>
+  <packaging>pom</packaging>
   <description>Batches for the restaurant application - a simple example using the Open Application Standard Platform for Java (OASP4J).</description>
   <dependencies>
     <dependency>
