#issue321:created new module and updated dependencies/imports

--- a/oasp4j-modules/oasp4j-jpa/pom.xml
+++ b/oasp4j-modules/oasp4j-jpa/pom.xml
@@ -16,10 +16,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>net.sf.m-m-m</groupId>
-      <artifactId>mmm-util-core</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
       <artifactId>hibernate-jpa-2.1-api</artifactId>
     </dependency>
@@ -36,6 +32,10 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-common</artifactId>
+     </dependency>
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
