--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -254,6 +254,11 @@
       </dependency>
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-common</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-configuration</artifactId>
         <version>${project.version}</version>
       </dependency>
