--- a/oasp4j-samples/oasp4j-sample-core/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-core/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>oasp4j-beanmapping</artifactId>
     </dependency>
 
+  <dependency>
+       <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-common</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-configuration</artifactId>
