--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -116,7 +116,7 @@
         <artifactId>jstl</artifactId>
         <version>1.2</version>
       </dependency>
-      <!-- JAX-RS API for REST services-->
+      <!-- JAX-RS API for REST services -->
       <dependency>
         <groupId>javax.ws.rs</groupId>
         <artifactId>javax.ws.rs-api</artifactId>
@@ -235,6 +235,11 @@
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-logging</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-basic</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
