--- a/oasp4j-modules/oasp4j-jpa/pom.xml
+++ b/oasp4j-modules/oasp4j-jpa/pom.xml
@@ -15,9 +15,9 @@
   <description>JPA-based persistence infrastructure of the Open Application Standard Platform for Java (OASP4J).</description>
 
   <dependencies>
-    <dependency>
-      <groupId>net.sf.m-m-m</groupId>
-      <artifactId>mmm-util-core</artifactId>
+   <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-basic</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
