First experiments with java configuration

--- a/oasp4j-samples/oasp4j-sample-server/src/main/webapp/WEB-INF/web.xml
+++ b/oasp4j-samples/oasp4j-sample-server/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,21 @@
   <display-name>Restaurant</display-name>
 
   <!-- Spring: Registration of ApplicationContext -->
+
+  <context-param>
+    <param-name>contextClass</param-name>
+    <param-value>
+      org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+    </param-value>
+  </context-param>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:config/app/beans-application.xml</param-value>
+    <param-value>
+      config.app.ApplicationConfig
+    </param-value>
   </context-param>
+
+
   <!-- Definition of the WebAppRooKey. This is necessary if multiple applications are handled by Tomcat, because
     the Tomcat-server does not manage the WebAppRoot for all applications separately. -->
   <context-param>
