--- a/oasp4j-samples/oasp4j-sample-core/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-core/pom.xml
@@ -34,10 +34,11 @@
       <artifactId>oasp4j-configuration</artifactId>
     </dependency>
 
-    <dependency>
+   <!--   <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-security</artifactId>
-    </dependency>
+    </dependency>-->
+
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
@@ -205,14 +206,14 @@
     </dependency>
 
     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-actuator</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
 
-            <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
 
   </dependencies>
 
