--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/application.properties
@@ -1,23 +1,3 @@
-security.user.name=chief
-security.user.password=chief
-management.security.role=USER
-security.user.role=USER
-
 http.mappers.jsonPrettyPrint=true
 
-database.hibernate.dialect = org.hibernate.dialect.H2Dialect
-database.datasource = org.h2.jdbcx.JdbcDataSource
-database.hibernate.hbm2ddl.auto = validate
-database.hibernate.show.sql = false
-database.migration.auto = true
-database.migration.testdata = false
-database.migration.clean = false
-# Port for internal H2 Database
-database.h2.server.port = ${oasp.db.port}
-
-appname=OASPAPP
-
-#CSRF AND CORS
-oasp.filter.csrf=true
-oasp.filter.cors=false
-
+security.basic.enabled=false
