oasp/oasp4j#232: fixed build after merging PR oasp-forge/oasp4j-spring-boot#1

--- a/oasp4j-samples/oasp4j-sample-core/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-core/pom.xml
@@ -34,10 +34,10 @@
       <artifactId>oasp4j-configuration</artifactId>
     </dependency>
 
-   <!--   <dependency>
+    <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-security</artifactId>
-    </dependency>-->
+    </dependency>
 
 
     <dependency>
