--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "oasp4j-ide"]
 	path = oasp4j-ide
 	url = https://github.com/oasp/oasp4j-ide.git
-[submodule "oasp4js"]
-    path = samples/server/src/main/client
-   	url = https://github.com/oasp/oasp4js.git
+[submodule "samples/server/src/main/client"]
+	path = samples/server/src/main/client
+	url = https://github.com/oasp/oasp4js.git
