oasp/oasp4j#232: build bootified WAR, have main class in base package of app to follow spring-boot best practices and allow component scan of entire app

--- a/samples/server/pom.xml
+++ b/samples/server/pom.xml
@@ -60,4 +60,18 @@
     </profile>
   </profiles>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>io.oasp.gastronomy.restaurant.SpringBootApp</mainClass>
+          <classifier>bootified</classifier>
+          <finalName>${project.artifactId}</finalName>
+          <layout>WAR</layout>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
