--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <oasp.gpg.keyname>joerg.hohwiller@capgemini.com</oasp.gpg.keyname>
     <oasp.flatten.mode>oss</oasp.flatten.mode>
     <spring.boot.version>1.3.0.RELEASE</spring.boot.version>
+    <js.client.dir>src/main/client</js.client.dir>
   </properties>
 
   <build>
