--- a/samples/server/pom.xml
+++ b/samples/server/pom.xml
@@ -21,39 +21,90 @@
     </dependency>
   </dependencies>
 
-  <!-- Overlays for JavaScript client -->
   <profiles>
     <profile>
       <id>jsclient</id>
       <activation>
+        <!--<activeByDefault>true</activeByDefault>-->
         <activeByDefault>false</activeByDefault>
       </activation>
-      <dependencies>
-        <dependency>
-          <groupId>io.oasp.js</groupId>
-          <artifactId>oasp4js-sample</artifactId>
-          <version>1.0.0-SNAPSHOT</version>
-          <type>zip</type>
-          <classifier>web</classifier>
-          <scope>runtime</scope>
-        </dependency>
-      </dependencies>
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
-            <configuration>
-              <overlays>
-                <overlay>
-                  <groupId>io.oasp.js</groupId>
-                  <artifactId>oasp4js-sample</artifactId>
-                  <type>zip</type>
-                  <classifier>web</classifier>
-                  <targetPath>jsclient</targetPath>
-                </overlay>
-              </overlays>
-            </configuration>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>npm-install</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>npm</executable>
+                  <arguments>
+                    <argument>install</argument>
+                  </arguments>
+                  <workingDirectory>${js.client.dir}</workingDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>tsd-install</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>tsd</executable>
+                  <arguments>
+                    <argument>install</argument>
+                  </arguments>
+                  <workingDirectory>${js.client.dir}</workingDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>gulp-clean</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>gulp</executable>
+                  <arguments>
+                    <argument>clean</argument>
+                  </arguments>
+                  <workingDirectory>${js.client.dir}</workingDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>gulp-build</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>gulp</executable>
+                  <arguments>
+                    <argument>build:dist</argument>
+                  </arguments>
+                  <workingDirectory>${js.client.dir}</workingDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>gulp-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>gulp</executable>
+                  <arguments>
+                    <argument>test</argument>
+                  </arguments>
+                  <workingDirectory>${js.client.dir}</workingDirectory>
+                </configuration>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
@@ -61,6 +112,15 @@
   </profiles>
 
   <build>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>${js.client.dir}/dist</directory>
+        <targetPath>static</targetPath>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -74,4 +134,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
