oasp/oasp4j#356: migration from XML to java completed except for batch oasp/oasp4j#355: fixed for REST services oasp/oasp4j#232: spring-boot properly introduced oasp/oasp4j#354: adjusted security config oasp/oasp4j#357: prepared WAR for external tomcat

--- a/modules/jpa/pom.xml
+++ b/modules/jpa/pom.xml
@@ -24,6 +24,10 @@
       <artifactId>hibernate-jpa-2.1-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>javax.transaction-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-jpa</artifactId>
     </dependency>
