--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -1,3 +1,9 @@
+server.port=8081
 http.mappers.jsonPrettyPrint=true
 security.basic.enabled=false
-server.port=8081
+
+#spring.profiles.active=h2file
+
+# Flyway for Database Setup and Migrations
+flyway.enabled=true
+flyway.clean-on-validation-error=true
