--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+server.context-path=/oasp4j-sample-server
 http.mappers.jsonPrettyPrint=true
 security.basic.enabled=false
 
@@ -7,3 +8,4 @@ security.basic.enabled=false
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
+
