some changes for websocket config -> not yet fixed

--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -9,3 +9,6 @@ security.basic.enabled=false
 flyway.enabled=true
 flyway.clean-on-validation-error=true
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+
