--- a/samples/server/src/main/webapp/WEB-INF/web.xml
+++ b/samples/server/src/main/webapp/WEB-INF/web.xml
@@ -2,18 +2,20 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
 
-  <display-name>Restaurant</display-name>
-
-  <!-- Spring: Registration of ApplicationContext -->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:config/app/beans-application.xml</param-value>
-  </context-param>
-  <!-- Definition of the WebAppRooKey. This is necessary if multiple applications are handled by Tomcat, because
-    the Tomcat-server does not manage the WebAppRoot for all applications separately. -->
-  <context-param>
-    <param-name>webAppRootKey</param-name>
-    <param-value>oasp-sample-server</param-value>
-  </context-param>
+   <!-- Web Sockets -->
+   <servlet>
+   <servlet-name>web-socket-dispatcher</servlet-name>
+   <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+   <init-param>
+   <param-name>contextConfigLocation</param-name>
+   <param-value>classpath:config/app/websocket/websocket-context.xml</param-value>
+   </init-param>
+   <load-on-startup>1</load-on-startup>
+   <async-supported>true</async-supported>
+   </servlet>
+   <servlet-mapping>
+   <servlet-name>web-socket-dispatcher</servlet-name>
+   <url-pattern>/websocket/*</url-pattern>
+   </servlet-mapping>
 
 </web-app>
