--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -13,6 +13,6 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
 # Flyway for setting up testdata in database
-#database.migration.auto=true
-#database.migration.testdata=false
-#database.migration.clean=false
+database.migration.auto=true
+database.migration.testdata=false
+database.migration.clean=false
