--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,8 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.17</version>
           <configuration>
+            <!-- force locale to en_EN or tests will fail in other locales -->
+            <argLine>-Duser.language=en -Duser.region=EN</argLine>
             <!-- Surefire changed the default to the project.build.directory causing trouble with file paths to test resources -->
             <workingDirectory>${basedir}</workingDirectory>
           </configuration>
