--- a/templates/server/pom.xml
+++ b/templates/server/pom.xml
@@ -23,7 +23,7 @@
     <sample.input>../../samples</sample.input>
     <sample.output>${project.build.outputDirectory}/archetype-resources</sample.output>
     <sample.core.input>${sample.input}/core</sample.core.input>
-    <sample.core.output>${sample.output}/__rootArtifactId__-core</sample.core.output>
+    <sample.core.output>${sample.output}/core</sample.core.output>
     <sample.core.sources.input>${sample.core.input}/src/main/java/${sample.package.path}</sample.core.sources.input>
     <sample.core.sources.output>${sample.core.output}/src/main/java</sample.core.sources.output>
     <sample.core.resources.input>${sample.core.input}/src/main/resources</sample.core.resources.input>
@@ -35,21 +35,11 @@
     <sample.core.test.resources.output>${sample.core.output}/src/test/resources</sample.core.test.resources.output>
 
     <sample.server.input>${sample.input}/server</sample.server.input>
-    <sample.server.output>${sample.output}/__rootArtifactId__-server</sample.server.output>
+    <sample.server.output>${sample.output}/server</sample.server.output>
     <sample.server.resources.input>${sample.server.input}/src/main/resources</sample.server.resources.input>
     <sample.server.resources.output>${sample.server.output}/src/main/resources</sample.server.resources.output>
     <sample.server.webresources.input>${sample.server.input}/src/main/webapp</sample.server.webresources.input>
     <sample.server.webresources.output>${sample.server.output}/src/main/webapp</sample.server.webresources.output>
-    <sample.integration.input>${sample.input}/integration</sample.integration.input>
-    <sample.integration.output>${sample.output}/__rootArtifactId__-server-integration</sample.integration.output>
-    <sample.integration.sources.input>${sample.integration.input}/src/main/java/${sample.package.path}/test</sample.integration.sources.input>
-    <sample.integration.sources.output>${sample.integration.output}/src/main/java/test</sample.integration.sources.output>
-    <sample.integration.resources.input>${sample.integration.input}/src/main/resources</sample.integration.resources.input>
-    <sample.integration.resources.output>${sample.integration.output}/src/main/resources</sample.integration.resources.output>
-    <sample.integration.tests.input>${sample.integration.input}/src/test/java/${sample.package.path}</sample.integration.tests.input>
-    <sample.integration.tests.output>${sample.integration.output}/src/test/java</sample.integration.tests.output>
-    <sample.integration.test.resources.input>${sample.integration.input}/src/test/resources</sample.integration.test.resources.input>
-    <sample.integration.test.resources.output>${sample.integration.output}/src/test/resources</sample.integration.test.resources.output>
   </properties>
 
   <build>
